# hyperchat

./: .gitignore  .woodpecker.yml  ARCHITECTURE.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.cjs  test.js
.github/workflows/: ci.yml
lib/: file-transfer.js  identity.js  messages.js  neet.js  quibble.js  room.js  video.js  voice.js
rust/: Cargo.toml  README.md
rust/src/: main.rs  types.rs
src/: crypto-manager.js  encoding.js  feed-manager.js  main.js  network-manager.js  web-server.js
test/: ci-runner.js  crypto-manager.test.js  crypto.test.js  encoding.test.js  feed-manager-advanced.test.js  feed-manager-extended.test.js  feed-manager.test.js  integration.test.js  local.js  network-manager.test.js  p2p-integration.test.js  run-tests.sh  setup.js  test-helpers.js  video-transfer.js
ui/: server-profile.js  server-room-helpers.js  server.js
ui/public/: app.bootstrap.connection.js  app.bootstrap.core.js  app.bootstrap.js  app.bootstrap.ui.js  app.calls.calling.js  app.calls.home-utils.js  app.calls.js  app.calls.presence-members.js  app.chat.admin-channels.js  app.chat.channels-calls.js  app.chat.js  app.chat.rooms-messages.js  app.js  index.html  styles.css  styles.input.css  ui.desktop.css  ui.desktop.js  ui.mobile.css  ui.mobile.js
web/: app.js  index.html  styles.css
